@@ -1,3 +1,13 @@
+2010-05-03  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump patchlevel to 8.6b1.2 to distinguish
+	* library/tk.tcl:	CVS snapshots from earlier snapshots as well
+	* unix/configure.in:	as the 8.6b1 and 8.6b2 releases.
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2010-05-03  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
